--- a/styles/style1.css
+++ b/styles/style1.css
@@ -567,20 +567,6 @@ video {
   margin-right: auto;
 }
 
-.line-clamp-2 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-}
-
-.line-clamp-4 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 4;
-}
-
 .line-clamp-3 {
   overflow: hidden;
   display: -webkit-box;
@@ -644,14 +630,6 @@ video {
   width: 100%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -684,14 +662,6 @@ video {
   gap: 0.75rem;
 }
 
-.gap-0 {
-  gap: 0px;
-}
-
-.gap-9 {
-  gap: 2.25rem;
-}
-
 .gap-y-3 {
   row-gap: 0.75rem;
 }
@@ -716,19 +686,16 @@ video {
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
 }
 
-.bg-rose-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(244 63 94 / var(--tw-bg-opacity));
+.bg-\[url\(\'\/images\/hero2\.jpg\'\)\] {
+  background-image: url('/images/hero2.jpg');
 }
 
-.bg-purple-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+.bg-\[url\(\'\/images\/hero1\.jpg\'\)\] {
+  background-image: url('/images/hero1.jpg');
 }
 
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+.bg-\[url\(\'\/images\/hero\.jpg\'\)\] {
+  background-image: url('/images/hero.jpg');
 }
 
 .bg-\[url\(\'\/images\/hero3\.jpg\'\)\] {
@@ -741,6 +708,14 @@ video {
 
 .bg-center {
   background-position: center;
+}
+
+.bg-top {
+  background-position: top;
+}
+
+.bg-bottom {
+  background-position: bottom;
 }
 
 .px-5 {
